# python_c_sockets

./: .appveyor.yml  .flake8  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.orig  README.md  README.rst  broadcast_ipv4.py  broadcast_rx.py  broadcast_tx.py  conftest.py  get_interfaces.c  memcheck.cmake  meson.build  multicast_rx.c  multicast_tx.c  pyproject.toml  requirements-dev.txt  setup.cfg  socksink.m  socksink.py  socksource.c  test_IPv4broadcast.py  test_unicast.py  unicast_rx.c  unicast_rx.m  unicast_rx.py  unicast_rx_h5.c  unicast_simple_rx.py  unicast_tx.c  unicast_tx.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml  src_meson.build
cmake/: compilers.cmake  kissnet.cmake
hdf5/: unicast_rx_h5.c
matlab/: isoctave.m  setupUDP.m  unicast_rx.m  unicast_tx.m
python_c_sockets/: __init__.py  hdf.py  rx.py  tx.py
python_c_sockets/tests/: test_IPv4broadcast.py
src/: CMakeLists.txt  loopback_udp.cpp  multicast_rx.c  multicast_tx.c  myerr.h  udp_rx.c  udp_rx_h5.c  udp_tx.c  unicast_rx.c  unicast_tx.c
src/hdf5/: udp_rx_h5.c  unicast_rx_h5.c
src/linux/: get_interfaces.c
src/python_c_sockets/: __init__.py  hdf.py  rx.py  tx.py
src/python_c_sockets/tests/: conftest.py  test_IPv4broadcast.py  test_unicast.py
test/: simul_exe.py
tests/: conftest.py  test_IPv4broadcast.py  test_unicast.py
